# llvml

./: .baz.dot  CMakeLists.txt  CMakeUserPresets.json  KaleidoscopeJIT.h  code.txt  compile_commands.json  configBuildRun.sh  llvm-1-start.md  llvm-2-builder.md  llvm-3-optimize.md  llvm-IRBuilder.md  llvm-code-1-lex-parse.md  llvm-code-2-codegen.md  llvm-code-3-optimizer.md  llvm-jit.md  main2.cpp  testllvm.cpp  testllvm.ll
.cache/clangd/index/: KaleidoscopeJIT.h.1643794F88F7D58F.idx  main.cpp.F07E5E9EC2E34E5E.idx  main2.cpp.724FC78954FFC6D8.idx  testllvm.cpp.21D600C2B9BFD06B.idx
tinylang/: AST.h  Diagnostic.cpp  Diagnostic.def  Diagnostic.h  Lexer.cpp  Lexer.h  Scope.cpp  Scope.h  Sema.h  Token.h  TokenKinds.cpp  TokenKinds.def  TokenKinds.h  t.cpp  t.h
